# package-registry

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  release.yml
src/: main.rs
src/registry/: mod.rs
src/registry/methods/: mod.rs
src/registry/methods/oidc/: github.rs  gitlab.rs  mod.rs
src/storage/: projects.rs
src/web/: mod.rs
src/web/api/: auth.rs  mod.rs  package.rs  publish.rs  user.rs
src/web/rest/: auth.rs  mod.rs  package.rs  user.rs
src/web/ui/: mod.rs  oidc.rs  package.rs
templates/: oidc_auth.html
