[package]
name = "comline-package-registry-server"
version = "0.1.0"
edition = "2021"


[dependencies]
askama = "0.12.0"
axum = "0.7.4"
eyre = "0.6.12"
once_cell = "1.18.0"
openidconnect = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.8.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
